--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "ant-design-vue": "^1.4.5",
         "core-js": "^3.3.2",
         "vue": "^2.6.10"
     },
