--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "ant-design-vue": "^1.4.5",
         "core-js": "^3.3.2",
+        "moment": "^2.24.0",
         "vue": "^2.6.10"
     },
     "devDependencies": {
