Add vetur to recommend plugin list

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,6 +10,7 @@
         "mhutchie.git-graph",
         "ms-python.python",
         "ms-vscode.go",
+        "octref.vetur",
         "vincaslt.highlight-matching-tag",
         "vscode-icons-team.vscode-icons"
     ]
