--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "smartap-frontend",
+    "name": "vuejs",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -13,7 +13,8 @@
         "ant-design-vue": "^1.4.5",
         "core-js": "^3.3.2",
         "moment": "^2.24.0",
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "vue-router": "^3.1.3"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.0.0",
