--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
         "start": "vue-cli-service lint && vue-cli-service serve"
     },
     "dependencies": {
-        "ant-design-vue": "^1.4.5",
-        "core-js": "^3.3.2",
+        "ant-design-vue": "^1.4.10",
+        "core-js": "^3.6.1",
         "moment": "^2.24.0",
-        "vue": "^2.6.10",
+        "vue": "^2.6.11",
+        "vue-resource": "^1.5.1",
         "vue-router": "^3.1.3"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^4.0.0",
-        "@vue/cli-plugin-eslint": "^4.0.0",
-        "@vue/cli-plugin-unit-jest": "^4.0.5",
-        "@vue/cli-service": "^4.0.0",
+        "@vue/cli-plugin-babel": "^4.1.1",
+        "@vue/cli-plugin-eslint": "^4.1.1",
+        "@vue/cli-plugin-unit-jest": "^4.1.1",
+        "@vue/cli-service": "^4.1.1",
         "@vue/test-utils": "1.0.0-beta.29",
         "babel-eslint": "^10.0.3",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.11"
     },
     "eslintConfig": {
         "root": true,
